# Android_Silk_encode_and_decode

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/administrator/myapp/: App.java  Jni.java  MainActivity.java  PathUtils.java
app/src/main/java/com/example/administrator/myapp/audio/: AudioMana.java  AudioManager.java  AudioRecordButton.java  AudioRecordManager.java  DialogManager.java  MediaManager.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  Encoder.c  decoder.c  decoder.cpp  silk.c
app/src/main/jni/include/: encode.h
app/src/main/res/layout/: activity_main.xml  dialog_manager.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
